# jproperty-collector

./: README.md  pyproject.toml
src/jproperty_collector/core/: __init__.py  base_client.py  exceptions.py
src/jproperty_collector/core/models/: __init__.py  data_source.py  data_source_client.py  property_transaction.py  quarter.py  query_params.py
src/jproperty_collector/sources/reinfolib/: client.py  consts.py  endpoints.py  formatter.py
src/jproperty_collector/sources/reinfolib/models/: __init__.py  price_classification.py  query_params.py
src/jproperty_collector/utils/: __init__.py  formatters.py  validators.py
