[project]
name = "jproperty-collector"
version = "0.1.0"
description = "Japanese real estate data collection library"
authors = [
    {name = "k0tk267",email = "k0tk2670@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "jproperty_collector", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
